Mon Nov 24 17:18:03 CET 2003 (tk)
---------------------------------
  * libclamav: cvd.c: small cleanups
  * included mbox testing tool (test/mbox/debugm.c) from Nigel

Mon Nov 24 10:19:48 IST 2003 (njh)
----------------------------------
  * clamav-milter: Support AllowSupplementaryGroups

Sun Nov 23 23:40:53 CET 2003 (tk)
---------------------------------
  * clamd: redirect the descriptors 1 and 2 to /dev/null by default, to
	   protect against a lock with Debug when Foreground is not enabled

Sat Nov 22 17:23:10 IST 2003 (njh)
----------------------------------
  * clamav-milter: Drop root privileges and support quarantine

Fri Nov 21 12:58:02 IST 2003 (njh)
---------------------------------
  * libclamav:	Scan multipart alternatives that have no boundaries, finds some
  		uuencoded happy99

Wed Nov 19 16:34:04 GMT 2003 (njh)
---------------------------------
  * clamav-milter: Close cmdSocket earlier
		Added setpgrp()

Mon Nov 17 13:28:16 IST 2003 (njh)
----------------------------------
  * libclamav:	Prevent buffer overflow in broken uuencoded files
		Handle spaces at the end of lines of MIME headers

Mon Nov 17 10:20:05 IST 2003 (njh)
----------------------------------
  * clamav-milter: changed version from 0.60 to 0.65

Sun Nov 16 02:34:12 CET 2003 (tk)
---------------------------------
  * libclamav, clamd: fixed limit initialization when ScanArchive is disabled
		      (thanks to Igor Brezac <igor*ipass.net>)

Sat Nov 15 03:54:39 CET 2003 (tk)
---------------------------------
  * sigtool: fixed --build problems introduced in 0.65

Sat Nov 15 01:17:29 CET 2003 (tk)
---------------------------------
  * libclamav: cli_scanzip: do malloc() outside of the zip scanning loop;
	       handle properly write error condition (patches by Rudolph
	       Pereira <r.pereira*isu.usyd.edu.au>)
  * libclamav: zziplib: fixed comp. problem under FreeBSD 5 (Rudolph Pereira)
  * freshclam: fixed compilation error under Cygwin (patch by Robert Hogan